--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -1,5 +1,8 @@
 on:
   pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
   publish:
@@ -13,13 +16,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           cache: 'npm'
           node-version-file: 'package.json'
+
       - name: Install Packages
         run: npm install
+
       - name: Check format
         run: npm run format:check
-
