--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -1,3 +1,5 @@
+name: Checks
+
 on:
   pull_request:
   push:
@@ -12,7 +14,7 @@ jobs:
       deployments: write
       statuses: write
 
-    name: Check format
+    name: format
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,5 +28,5 @@ jobs:
       - name: Install Packages
         run: npm install
 
-      - name: Check format
+      - name: format
         run: npm run format:check
